fix: added body {overflow-y: scroll}

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@
   font-family: "Ibarra Real Nova", serif;
 }
 
+body {
+  overflow-y: scroll;
+}
+
 h1,
 h2,
 h3,
